syntax = "proto3";

package monitoring;
option go_package = "/monitoring";

import "google/protobuf/timestamp.proto";

message Request {
  // The header from the incoming request to XP services. The map value is a comma-delimited string.
  string header = 1;

  // The JSON body of the request to XP services, UTF-8-encoded
  string body = 2;
}

// key
message TreatmentServiceResultLogKey {
  // The unique request id generated by Treatment Service, for every incoming request
  string request_id = 1;

  // The time at which the final response from Treatment Service is generated
  google.protobuf.Timestamp event_timestamp = 2;
}

// message
message TreatmentServiceResultLogMessage {
  // The unique request id generated by Treatment Service, for every incoming request
  string request_id = 1;

  // The time at which the final response from Treatment Service is generated
  google.protobuf.Timestamp event_timestamp = 2;

  // The original request to Treatment Service
  Request request = 3;

  // The parsed segment based on registered experiment variables via Project Settings
  string segment = 4;

  // The project's id of the request
  uint32 project_id = 5;

  // The matched experiment's id based on request's segment values
  int64 experiment_id = 6;

  // The matched experiment's name based on request's segment values
  string experiment_name = 7;

  // The assigned treatment's name based on matched experiment
  string treatment_name = 8;

  // The assigned treatment's config (JSON string) in based on matched experiment
  string treatment_config = 9;

  // The error (if any) of the request
  string error = 10;
}
